<resources>
    <string name="app_name">Restaurant Manager</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Restaurant Manager</string>
    <string name="nav_header_subtitle">Email:    </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_location">Location</string>
    <string name="menu_users">Users</string>
    <string name="menu_inventory">Inventory Status</string>
    <string name="menu_send">Send Report with Email</string>
    <string name="menu_logout">Log Out</string>

    <string name="write_a_message">Write a message…</string>
    <string name="no_users_found">No users found!</string>
    <string name="press_back_again_to_exit">Press Back again to Exit.</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
